fix display on safari

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -8,7 +8,7 @@
   overflow-x: hidden;
   overflow-y: scroll;
   perspective: 1px;
-  perspective-origin: 0 0;
+  perspective-origin: bottom right;
   width: 100%;
 }
 
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  transform-origin: 0 0;
+  transform-origin: bottom right;
   transform: translateZ(0);
   transition: background-color 0.5s linear, backdrop-filter 0.5s linear;
 }
